fixed spacing

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -50,4 +50,5 @@ p {
 
 .spinner {
   font-size: 150px;
+  padding-right: 13px;
 }
